// Vitest Snapshot v1

exports[`Button > should render a button 1`] = `
<div>
  <button
    class="cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-blue-400 border border-blue-500 bg-blue-400 hover:bg-blue-500 transition-colors text-white p-2 rounded-md"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button > should render a button with a custom class 1`] = `
<div>
  <button
    class="cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-blue-400 border border-blue-500 bg-blue-400 hover:bg-blue-500 transition-colors text-white p-2 rounded-md custom-class"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button > should render a button with a custom type 1`] = `
<div>
  <button
    class="cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-blue-400 border border-blue-500 bg-blue-400 hover:bg-blue-500 transition-colors text-white p-2 rounded-md"
    type="submit"
  >
    Click me
  </button>
</div>
`;
